@@ -6,8 +6,10 @@ else
   args=( "$@" )
 fi
 
-if [ "`uname -i`" = "x86_64" ]; then
-  exec /usr/bin/qemu-system-x86_64 "${args[@]}"
+if [ "`uname -r | grep x86_64 | wc -l`" -eq "1" ]; then
+  bin=/usr/bin/qemu-system-x86_64
 else
-  exec /usr/bin/qemu "${args[@]}"
+  bin=/usr/bin/qemu
 fi
+
+exec $bin "${args[@]}"
