@@ -8,6 +8,7 @@ v0.9.2
 * [BGBUILD-209] Wrong /etc/mtab on Fedora 15 appliances causes errors
 * [BGBUILD-203] Vmware vmdk disk size is wrong when installing via kickstart files
 * [BGBUILD-207] Guestfs dies on Fedora 15 with 'KVM not supported for this target' message
+* [BGBUILD-83] Enable libguestfs log callback to redirect guestfs output to logger
 
 v0.9.1
 
